--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('https://https://img3.doubanio.com/view/photo/raw/public/p443423385.jpg')">
+    <header class="intro-header" style="background-image: url('https://img3.doubanio.com/view/photo/raw/public/p443423385.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
