菜谱列表更改
 1.菜谱列表更改

--- a/post.html
+++ b/post.html
@@ -88,29 +88,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p>Chicken Wonton Soup</p>
-
-                    <p>Super Crispy Beef Patties</p>
-
-                    <p>Sour and Spicy Chinese Cabbage</p>
-
-                    <p>Japanese Curry with Chicken Cutlet</p>
-
-                    <p>Hei San Duo(Spicy Minced Pork with Hot Chilli Peper and Pickled Turnip) </p>
-
-                    <h2 class="section-heading">The Final Frontier</h2>
-
-                    <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-                    <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-                    <blockquote>The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
-
-                    <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
-
-                    <h2 class="section-heading">Reaching for the Stars</h2>
-
-                    <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
+                    <h2 class="section-heading">Chicken Wonton Soup</h2>
+                    <p>待补充</p>
+                    <h2 class="section-heading">Super Crispy Beef Patties</h2>
+                    <p>待补充</p>
+                    <h2 class="section-heading">Sour and Spicy Chinese Cabbage</h2>
+                    <p>待补充</p>
+                    <h2 class="section-heading">Japanese Curry with Chicken Cutlet</h2>
+                    <p>待补充</p>
+                    <h2 class="section-heading">Hei San Duo (Spicy Minced Pork with Hot Chilli Peper and Pickled Turnip) </h2>
+                    <p>待补充</p>
 
                     <a href="#">
                         <img class="img-responsive" src="img/post-sample-image.jpg" alt="">
