--- a/post.html
+++ b/post.html
@@ -100,7 +100,7 @@
                     <p>待补充</p>
 
                     <a href="#">
-                        <img class="img-responsive" src="img/post-sample-image.jpg" alt="">
+                        <img class="img-responsive" src="https://img3.doubanio.com/view/photo/raw/public/p1468670845.jpg" alt="">
                     </a>
                     <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
 
