字体颜色大小改变
字体颜色大小改变

--- a/post.html
+++ b/post.html
@@ -16,6 +16,7 @@
 
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/my.css">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -82,7 +83,6 @@
             </div>
         </div>
     </header>
-
     <!-- Post Content -->
     <article>
         <div class="container">
@@ -90,14 +90,19 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <h2 class="section-heading">Chicken Wonton Soup</h2>
                     <p>待补充</p>
+                    <p class="small-text">待补充</p>
                     <h2 class="section-heading">Super Crispy Beef Patties</h2>
                     <p>待补充</p>
+                    <p class="small-text">待补充</p>
                     <h2 class="section-heading">Sour and Spicy Chinese Cabbage</h2>
                     <p>待补充</p>
+                    <p class="small-text">待补充</p>
                     <h2 class="section-heading">Japanese Curry with Chicken Cutlet</h2>
                     <p>待补充</p>
+                    <p class="small-text">待补充</p>
                     <h2 class="section-heading">Hei San Duo (Spicy Minced Pork with Hot Chilli Peper and Pickled Turnip) </h2>
                     <p>待补充</p>
+                    <p class="small-text">待补充</p>
 
                     <a href="#">
                         <img class="img-responsive" src="https://img3.doubanio.com/view/photo/raw/public/p1468670845.jpg" alt="">
