牛肉饼名字更改
牛肉饼更改

--- a/post.html
+++ b/post.html
@@ -92,7 +92,7 @@
                     <p>待补充</p>
                     <p class="small-text">待补充</p>
                     <img class="img-responsive" src="https://img3.doubanio.com/view/photo/raw/public/p1468670845.jpg" alt="">
-                    <h2 class="section-heading">Super Crispy Beef Patties</h2>
+                    <h2 class="section-heading">Super Duper Crispy Beef Patties</h2>
                     <p>待补充</p>
                     <p class="small-text">待补充</p>
                     <img class="img-responsive" src="https://img3.doubanio.com/view/photo/raw/public/p1468670845.jpg" alt="">
