--- a/post.html
+++ b/post.html
@@ -110,9 +110,10 @@
                     <img class="img-responsive" src="https://img3.doubanio.com/view/photo/raw/public/p1468670845.jpg" alt="">
 
                     <a href="#">
+                            <p>待补充</p>  
                         <img class="img-responsive" src="https://img3.doubanio.com/view/photo/raw/public/p1468670845.jpg" alt="">
                     </a>
-                    <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
+                    <span class="caption text-muted">绝对要享受此时此刻</span>
 
                     <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
 
