--- a/post.html
+++ b/post.html
@@ -109,17 +109,10 @@
                     <p class="small-text">待补充</p>
                     <img class="img-responsive" src="https://img3.doubanio.com/view/photo/raw/public/p1468670845.jpg" alt="">
 
-                    <a href="#">
-                            <p>待补充</p>  
-                        <img class="img-responsive" src="https://img3.doubanio.com/view/photo/raw/public/p1468670845.jpg" alt="">
-                    </a>
-                    <span class="caption text-muted">绝对要享受此时此刻</span>
+                   
+                    <span class="caption text-muted" id="image_text">·绝对要享受此时此刻·</span>
 
-                    <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-
-                    <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-
-                    <p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
+                    
                 </div>
             </div>
         </div>
