--- a/post.html
+++ b/post.html
@@ -37,6 +37,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
+                <input id="inp-query" name="q" size="22" maxlength="60" autocomplete="off" value="" placeholder="搜索你感兴趣的内容和人...">
+
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -61,7 +63,9 @@
                     <li>
                         <a href="contact.html">联系我 Contact</a>
                     </li>
+                
                 </ul>
+                
             </div>
             <!-- /.navbar-collapse -->
         </div>
